# cybersecsuite

./: .aiexclude  .aiignore  .claudeignore  .env.example  .eslintrc.json  .gitignore  .lsp.json  ANALYSIS_INDEX.md  ARCHITECTURE_DECISION_MATRIX.md  ARCHITECTURE_RECOMMENDATION.md  ARCHITECTURE_REVIEW_CORE_TYPES.md  CHANGELOG_PHASE2_FRONTEND.md  CLAUDE.md  Dockerfile  FEATURE.CHARTS.md  FEATURE.FLOWGRAPH.md  MIGRATION_SUMMARY.md  Makefile  PHASE0_CHANGELOG.md  PHASE1_CHANGELOG.md  PHASE2_CHANGELOG.md  PHASE3_CHANGELOG.md  PHASE3_FRONTEND_AGENTS_CHANGELOG.md  PHASE4_8B9_CHANGELOG_SUMMARY.txt  PHASE4_8B9_FRONTEND_CHANGELOG.md  PHASE7_BOOTSTRAP_CHANGELOG.md  PHASE_11.4_SUMMARY.md  PHASE_11.4_VERIFICATION.txt  PHASE_11.6_COMPLETION.md  PHASE_11_3_COMPLETION.md  PHASE_13_ROADMAP.md  PHASE_15_HOOKS_IMPROVEMENT.md  PROPOSAL.md  PROPOSAL_MEM.md  QWEN_ANALYSIS_INDEX.md  QWEN_EXECUTIVE_SUMMARY.md  QWEN_IMPLEMENTATION_BLUEPRINT.md  QWEN_QUICK_DECISION_GUIDE.md  QWEN_ROUTING_ANALYSIS.md  QWEN_VISUAL_DIAGRAMS.md  (+27 more)
.ai/: acp.json
.ai/acp_agent/: __init__.py  __main__.py  server.py
.ai/mcp/: mcp.json
.aiassistant/rules/: ai-instructions.md  development.md  python.md  typescript.md
.claude/: .initialized  .mode.json  MEMORY.md  context.yaml  settings.json  skills.tree
.claude/agents/: AGENT_FACTORY.md  DEV_SUB_AGENTS.md  audiovideo-analyst.md  certificate-analyst.md  command-verifier.md  cybersec-agent.md  cybersec-analyst.md  encoding-specialist.md  filesystem-analyst.md  frontend-design.md  kernel-analyst.md  layer2-specialist.md  layer3-specialist.md  layer4-specialist.md  layer5-specialist.md  watchdog.md  (+15 more)
.github/: README.md  copilot-instructions.md  customization-cheat-sheet.md
.jb/: ai-instructions.md
.plan/: VERIFICATION.md  architecture.md  checkpoints.md  codebase_dependency_analyzer.py  development-workflow.md  features_overview.md  marketplace-cleanup-steps-1-3.md  memory.md  plan.md  rubber-duck-sync-plan.md  rules.md  session-checkpoint.md  session.db  tag-junction-naming-standard.md  taggable-entity-inventory.md
acp_agent/: server.py
benchmarks/: __init__.py  qol_injection_benchmark.py
config/: mcps.json
docs/: AGENT-DELEGATION.md  AGENT_HOOKS_RUFF_SCOPING.md  BOOTSTRAP.md  CHANGELOG_PHASE8.md  CI_CD_DASHBOARD.md  INDEX.md  INTEGRATION_TEST_REPORT.md  LINTING_SETUP.md  PERFORMANCE_BASELINE.md  PHASE5E_COMPLETION.md  PHASE6_COMPLETION.md  QA_REPORT.md  README.md  SHARED_PACKAGE.md  SIDEBAR-PANEL-MAP.md  TOOL_DISCOVERY.md  TOOL_NAME_MAPPING.md  TS_API_ANALYSIS.md  VISUAL_REGRESSION_REPORT.md  agent-sdk-integration.md  agents.md  api.md  architecture.md  audit-llm.md  ci-cd-dashboard.md  configuration.md  contributing.md  database.md  deployment.md  deprecation-accounts.md  deprecation-agent.md  index.md  layer-integration.md  marketplace.md  mcp-tools.md  models-audit.md  omniroute-mcp.md  qa-report.md  quickstart.md  setup.md  (+4 more)
hooks/: BaselineUpdated.md  SessionEnd.md  SessionStart.md  YaraRuleTesting.md  agent_end.py  agent_start.py  baseline_updated.py  database.py  evidence_collected.py  exact_match_cache.py  finding_confirmed.py  first_init.py  hooks.json  investigation_end.py  investigation_start.py  ioc_discovered.py  mode_switch.py  permission_violation.py  phase_end.py  phase_start.py  post_tool_use.py  pre_tool_call.py  root_command_executed.py  session_end.py  session_start.py  termmate_idle.py  utils.py  yara_rule_generator.py  yara_rule_optimizer.py  yara_rule_tester.py
legacy_docs/: audit-checks.md  database.md  deprecation-a2a.md  deprecation-api.md  integration-test-report.md  mcp-config-audit.md  testing-roadmap.md  visual-regression-report.md
mcps/: MCP_DEV_INSTRUCTIONS.md
mcps/playwright-stealth-mcp/: .claudeignore  CLAUDE_CODE_SETUP.md  INSTALLATION_GUIDE.html  README.md  config.py  heavy.py  main.py  pyproject.toml  utils.py
mcps/token-optimization-mcp/: .claudeignore  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
mcps/token-optimization-mcp/mcp-servers/context-cache-server/: config.py  security.py  server.py
mcps/token-optimization-mcp/tests/: conftest.py  test_helpers.py  test_tools.py
plans/: CHECKLIST.md  DECISIONS.md  DOCUMENTATION-MIGRATION-AUDIT-2026-04-26.md  INTRODUCTION.md  ONBOARDING-orchestrator-2026-04-26.md  ORCHESTRATOR-GUIDE-2026-04-26.md  ORCHESTRATOR_QUICK_REFERENCE.md  PHASE5E_INDEX.md  PHASE_12_REDUNDANT_CLEANUP.md  PHASE_COMPLETED_SCRIPTS_REORGANIZATION.md  PLAN.md  PROGRESS.md  README.md  briefing-chat-orchestrator-2026-04-26.md  briefing-cleanup-memo-2026-04-26.md  cleanup-opensearch-wazu-2026-04-26.md  orchestrator-briefing-mcp-modernization-2026-04-26.md  phase-7-slash-reference.md  phase-9-reference.md  plan-openobserve-migration.md  plan-react-migration.md  plan-ruff-lint-fix-2026-04-23.md  plan-src-cleanup.md  plan.md  typescript-frontend-linting-2026-04-26.md
prompts/: forensic_system_prompts.yaml  plan-mode-system-prompt.md
scripts/: README.md  benchmark_tiers.py  codebase_dependency_analyzer.py  fix_skills.py  gwt-aliases.sh  install-mcp-core.sh  worktree-session-manager.py
src/: README.md  a2a.py  business_metrics.py  logger.py  manage.py  otel_utils.py  propagation.py
src/cssmcp/mcps/custom-mcp/: pyproject.toml
templates/: skills.tree
tests/: README.md  conftest.py  pytest.ini  test_a2a.py  test_accounts_sync.py  test_agent_discovery.py  test_agent_sdk.py  test_agent_streaming_backend.py  test_ai_proxy.py  test_audit_logging.py  test_autopilot.py  test_cache_invalidation.py  test_crypto.py  test_dashboard_routing.py  test_integrity_checks.py  test_llm_orchestrator.py  test_mcp_server.py  test_phase0_infrastructure.py  test_phase8a.py  test_poc_model.py  test_provider_auth_api.py  test_qol.py  test_qol_phase2.py  test_scope_errors.py  test_scope_middleware.py  test_scope_v2.py  test_sdk.py  test_session_state.py  test_src_cleanup.py  test_telemetry.py  test_template_registry_api.py  test_worker_api_crud.py  test_worker_batch.py  test_worker_history.py  test_worker_lifecycle.py  test_worker_metrics.py  test_worker_scope.py  test_worker_state.py  test_worktree_manager.py
(+6924 files in other folders)
