[project]
name = "cybersecsuite"
version = "0.1.0"
description = "Cybersecurity forensics suite — A2A agent orchestration, MCP server, threat intelligence, artifact signing"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    # MCP server
    "argon2-cffi>=23.1",
    "fastmcp>=2.0",
    # ASGI
    "fastapi>=0.115",
    "starlette>=0.46",
    "uvicorn[standard]>=0.34",
    # Database
    "tortoise-orm>=1.1.5",
    "tortoise-orm[asyncpg]>=0.22",
    "asyncpg>=0.30",
    # A2A agent networking + AI proxy HTTP client
    "httpx[http2]>=0.28",
    # Data validation
    "pydantic>=2.10",
    # Type hints (used in memory backends)
    "typing_extensions>=4.12; python_version < '3.13'",
    # Agent loader
    "pyyaml>=6.0",
    # Cryptography
    "cryptography>=44.0",
    # Event loop
    "uvloop>=0.21; sys_platform == 'linux'",
    # Agent SDK
    "claude-agent-sdk @ git+https://github.com/anthropics/claude-agent-sdk-python.git@v0.1.61",
    "openpyxl>=3.1.5",
    "dbus-next>=0.2.3",
    "redis>=7.0",
    "anthropic>=0.84.0",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-exporter-otlp-proto-http>=1.28",
    "opentelemetry-instrumentation-httpx>=0.49",
]

[project.scripts]
cybersecsuite      = "manage:main_sync"
cybersec-mcp       = "csmcp.cybersec.server:main"
cybersec-mcp-crypto = "csmcp.dystopian_server:main"
cybersec-proxy     = "ai_proxy.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
  "src/logger",
  "src/llm",
  "src/a2a",
  "src/accounts",
  "src/agent",
  "src/ai_proxy",
  "src/api",
  "src/crypto",
  "src/csmcp",
  "src/cybersecsuite",
  "src/cybersecsuite/data",
  "src/cybersecsuite/data/marketplace",
  "src/dashboard",
  "src/db",
  "src/hooks",
  "src/manage",
  "src/openobserve",
  "src/opensearch",
  "src/proxy",
  "src/startup",
  "src/telemetry",
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "ipython>=9.11.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.9",
    "typescript>=0.0.12",
]
test = [
    "pytest>=9.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "anyio>=4.7",
]
browser = [
    "playwright>=1.49",
]

[tool.pytest.ini_options]
testpaths   = ["tests"]
pythonpath  = ["src"]
asyncio_mode = "auto"

[tool.ruff]
src = ["src"]
line-length = 100
exclude = [".claude"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true
exclude = [".claude", ".venv", "__pycache__"]
plugins = ["pydantic.mypy"]

[tool.pydantic]
mypy_plugins = ["pydantic.mypy"]
