[project]
name = "cybersecsuite"
version = "0.1.0"
description = "Cybersecurity forensics suite — A2A agent orchestration, MCP server, threat intelligence, artifact signing"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    # MCP server
    "argon2-cffi>=23.1",
    "fastmcp>=2.0",
    # ASGI
    "fastapi>=0.115",
    "starlette>=0.46",
    "uvicorn[standard]>=0.34",
    # Database
    "tortoise-orm>=1.1.5",
    "tortoise-orm[asyncpg]>=0.22",
    "asyncpg>=0.30",
    # Data validation
    "pydantic>=2.10",
    # Type hints (used in memory backends)
    "typing_extensions>=4.12; python_version < '3.13'",
    # Agent loader
    "pyyaml>=6.0",
    # Cryptography
    "cryptography>=44.0",
    # Event loop
    "uvloop>=0.21; sys_platform == 'linux'",
    # Agent SDK
    "claude-agent-sdk @ git+https://github.com/anthropics/claude-agent-sdk-python.git@v0.1.61",
    "openpyxl>=3.1.5",
    "dbus-next>=0.2.3",
    "redis>=7.0",
    "anthropic>=0.84.0",
    # OpenTelemetry observability stack
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-exporter-otlp-proto-http>=1.28",
    "opentelemetry-instrumentation>=0.49",
    "opentelemetry-instrumentation-httpx>=0.49",
    "opentelemetry-instrumentation-openai>=0.53.0",
    "opentelemetry-semantic-conventions>=0.49",
    "click>=8.3.1",
    "aiohttp>=3.13.3",
    # API Provider SDKs
    "anthropic>=0.84.0",
    "anthropic[aiohttp]",
    "openai>=1.80.0",
    "ai21>=2.0.0",
    "cohere>=5.0.0",
    "mistralai>=0.0.19",
    "groq>=0.4.0",
    "google-generativeai>=0.3.0",
    "together>=1.0.0",
    "fireworks-ai>=0.11.0",
    "ollama>=0.1.0",
    "deepinfra>=0.1.0",
    "openrouter>=0.1.0",
    "msgspec>=0.20.0",
]

[project.scripts]
cybersecsuite      = "css.manager:main_sync"
cybersec-mcp       = "cssmcp.cybersec.server:main"
cybersec-mcp-crypto = "cssmcp.dystopian_server:main"
cybersec-proxy     = "ai_proxy.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
  # CANONICAL PACKAGES (primary source of truth)
  "src/css",
  "src/core",
  "src/core/checks",
  "src/core/dbus",
  "src/core/memory",
  "src/core/openobserve",
  "src/core/telemetry",
  "src/core/utils",
  "src/core/llm",
  "src/core/db",
  "src/core/registries",
  "src/core/hooks",
  "src/core/accounts",
  "src/core/ai_proxy",
  "src/core/marketplace",
  "src/core/crypto",
  "src/core/routes",
  "src/core/startup",
  "src/core/entities",
  "src/core/communicators",
  "src/core/redis",
  "src/core/asgi",
  "src/core/endpoints",
  "src/core/tools",
  "src/core/cssmcp",
  "src/core/postgres",
  
  # APP-LEVEL PACKAGES
  "src/apps",
  "src/apps/streaming",

  # BACKWARD COMPATIBILITY SHIMS (enable gradual migration)
  "src/accounts",
  "src/ai_proxy",
  "src/asgi",
  "src/checks",
  "src/communicators",
  "src/crypto",
  "src/cssmcp",
  "src/db",
  "src/dbus",
  "src/endpoints",
  "src/entities",
  "src/hooks",
  "src/llm",
  "src/marketplace",
  "src/memory",
  "src/openobserve",
  "src/postgres",
  "src/redis",
  "src/registries",
  "src/routes",
  "src/startup",
  "src/telemetry",
  "src/tools",
  "src/utils",
  "src/agent",
  
  # UTILITY PACKAGES
  "src/manage",
  "src/logger",
  
  # DATA
  "src/cybersecsuite",
  "src/cybersecsuite/data",
  "src/cybersecsuite/data/marketplace",
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "ipython>=9.11.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.9",
    "typescript>=0.0.12",
]
test = [
    "pytest>=9.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "anyio>=4.7",
]
browser = [
    "playwright>=1.49",
]

[tool.pytest.ini_options]
testpaths   = ["tests"]
pythonpath  = ["src"]
asyncio_mode = "auto"

[tool.ruff]
src = ["src"]
line-length = 100
exclude = [".claude"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true
exclude = [".claude", ".venv", "__pycache__"]
plugins = ["pydantic.mypy"]

[tool.pydantic]
mypy_plugins = ["pydantic.mypy"]
