[project]
name = "cybersecsuite"
version = "0.1.0"
description = "Cybersecurity forensics suite — A2A agent orchestration, MCP server, threat intelligence, artifact signing"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    # MCP server
    "argon2-cffi>=23.1",
    "fastmcp>=3.2.4",
    # ASGI
    "fastapi>=0.136.1",
    "starlette>=1.0.0",
    "uvicorn[standard]>=0.46.0",
    # Database
    "tortoise-orm>=1.1.7",
    "tortoise-orm[asyncpg]>=1.1.7",
    "asyncpg>=0.31.0",
    # Type hints (used in memory backends)
    "typing_extensions>=4.12; python_version < '3.13'",
    # Agent loader
    "pyyaml>=6.0.3",
    # Cryptography
    "cryptography>=48.0.0",
    # Event loop
    "uvloop>=0.21; sys_platform == 'linux'",
    # Agent SDK
    "claude-agent-sdk>=0.1.79",
    "openpyxl>=3.1.5",
    "dbus-next>=0.2.3",
    "redis>=7.0",
    "anthropic>=0.100.0",
    "anthropic[aiohttp]",
    "openai>=2.36.0",
    "ai21>=4.3.0",
    "cohere>=5.21.1",
    "mistralai==2.4.5",
    "groq>=1.2.0",
    "google-generativeai>=0.8.6",
    "google-genai>=2.0.0",
    "together>=2.12.0",
    "fireworks-ai>=0.19.20",
    "ollama>=0.6.2",
    "deepinfra>=0.1.0",
    "openrouter>=0.9.1",
    "cerebras-cloud-sdk>=1.67.0",
    "perplexityai>=0.32.1",
    "msgspec>=0.21.1",
    "ruff>=0.15.12",
    "tortoise>=0.1.1",
    "deepseek>=1.0.0",
    "github-copilot-sdk>=0.3.0",
    "attrs>=26.1.0",
]

[project.entry-points."css.modules"]
tags = "css.modules.tags.endpoints"
tasks = "css.modules.tasks.endpoints"
teams = "css.modules.teams.endpoints"
tools = "css.modules.tools.endpoints"

[project.entry-points."css.api_services"]
anthropic = "css.api_services.anthropic"
openai = "css.api_services.openai"
gemini = "css.api_services.gemini"
cohere = "css.api_services.cohere"
mistral = "css.api_services.mistral"
groq = "css.api_services.groq"
ollama = "css.api_services.ollama"
deepinfra = "css.api_services.deepinfra"
deepseek = "css.api_services.deepseek"
fireworks = "css.api_services.fireworks"
openrouter = "css.api_services.openrouter"
sambanova = "css.api_services.sambanova"
together = "css.api_services.together"
xai = "css.api_services.xai"
github = "css.api_services.github"
ai21 = "css.api_services.ai21"
cerebras = "css.api_services.cerebras"
cloudflare = "css.api_services.cloudflare"
lambda_api = "css.api_services.lambda_api"
nscale = "css.api_services.nscale"
nvidia = "css.api_services.nvidia"
opencode = "css.api_services.opencode"
perplexity = "css.api_services.perplexity"
google_a2a = "css.api_services.google_a2a"

[project.scripts]
cybersecsuite      = "css.manager:main_sync"
cybersec-mcp       = "cssmcp.cybersec.server:main"
cybersec-mcp-crypto = "cssmcp.dystopian_server:main"
cybersec-proxy     = "ai_proxy.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
  # CANONICAL PACKAGES (primary source of truth)
  "src/css",
  "src/core",
  "src/core/checks",
  "src/core/dbus",
  "src/core/memory",
  "src/core/openobserve",
  "src/core/telemetry",
  "src/core/utils",
  "src/core/llm",
  "src/core/db",
  "src/core/registries",
  "src/core/hooks",
  "src/core/accounts",
  "src/core/ai_proxy",
  "src/core/marketplace",
  "src/core/crypto",
  "src/core/routes",
  "src/core/startup",
  "src/core/entities",
  "src/core/communicators",
  "src/core/redis",
  "src/core/asgi",
  "src/core/endpoints",
  "src/core/tools",
  "src/core/cssmcp",
  "src/core/postgres",
  
  # APP-LEVEL PACKAGES
  "src/apps",
  "src/apps/streaming",


  # UTILITY PACKAGES
  "src/manage",
  "src/logger",
  
  # DATA
  "src/cybersecsuite",
  "src/cybersecsuite/data",
  "src/cybersecsuite/data/marketplace",
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "ipython>=9.11.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.12",
    "typescript>=0.0.12",
]
test = [
    "pytest>=9.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "anyio>=4.7",
]
browser = [
    "playwright>=1.49",
]

[tool.pytest.ini_options]
testpaths   = ["tests"]
pythonpath  = ["src"]
asyncio_mode = "auto"

[tool.ruff]
src = ["src"]
line-length = 100
exclude = [".claude"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true
exclude = [".claude", ".venv", "__pycache__"]

