[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "custom-mcp"
version = "1.0.0"
description = "Custom MCP bridge for externalized MCPs in CyberSecSuite"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "CyberSecSuite", email = "dev@cybersecsuite.local" }
]

dependencies = [
    "fastmcp>=3.1.0",
]

[project.scripts]
custom-mcp = "custom_mcp.__main__:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/custom_mcp"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
